<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="be.kdg.layouts.MainActivity"
        android:orientation="vertical">

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/relative_layout"
            android:onClick="openRelativeLayoutActivity"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/linear_layout"
            android:onClick="openLinearLayoutActivity"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grid_layout"
            android:onClick="openGridLayoutActivity"/>
</LinearLayout>
