<?xml version="1.0" encoding="utf-8"?>
<GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_grid_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="be.kdg.layouts.GridLayoutActivity">
    <TextView
            android:id="@+id/first_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:labelFor="@+id/first_name_input"
            android:layout_row="0"
            android:layout_column="0"/>

    <EditText
            android:id="@id/first_name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"/>

    <TextView
            android:id="@+id/last_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:labelFor="@+id/last_name_input"
            android:layout_row="1"
            android:layout_column="0"/>

    <EditText
            android:id="@id/last_name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"/>

    <TextView
            android:id="@+id/age_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:labelFor="@+id/age_input"
            android:layout_row="2"
            android:layout_column="0"/>

    <EditText
            android:id="@id/age_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:onClick="close"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"/>
</GridLayout>
